--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <ul>
        {% for doc in doclist %}
             {% if doc.name contains '.md' or doc.name contains '.html' %}
-                <li><a href="{{ site.baseurl }}{{ doc.url }}">{{ doc.url }}</a></li>
+                <li><a href="{{ 'https://api.github.com/repos/juyingnan/vccf_visualization.io/contents/html/' }}{{ doc.url }}">{{ doc.url }}</a></li>
             {% endif %}
         {% endfor %}
     </ul>
