--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-   {% assign doclist = site.pages | sort: 'url'  %}
+   {% assign doclist = https://api.github.com/repos/juyingnan/vccf_visualization.io | sort: 'url'  %}
     <ul>
        {% for doc in doclist %}
             {% if doc.name contains '.md' or doc.name contains '.html' %}
-                <li><a href="{{ 'https://api.github.com/repos/juyingnan/vccf_visualization.io/contents/html/' }}{{ doc.url }}">{{ doc.url }}</a></li>
+                <li><a href="{{ 'https://juyingnan.github.io/vccf_visualization.io/html/' }}{{ doc.url }}">{{ doc.url }}</a></li>
             {% endif %}
         {% endfor %}
     </ul>
