--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
-   {% assign doclist = https://api.github.com/repos/juyingnan/vccf_visualization.io | sort: 'url'  %}
-    <ul>
-       {% for doc in doclist %}
-            {% if doc.name contains '.md' or doc.name contains '.html' %}
-                <li><a href="{{ 'https://juyingnan.github.io/vccf_visualization.io/html/' }}{{ doc.url }}">{{ doc.url }}</a></li>
-            {% endif %}
-        {% endfor %}
-    </ul>
+<html>
+  <body>
+    <script>
+      (async () => {
+        const response = await fetch('https://api.github.com/repos/juyingnan/vccf_visualization.io/contents/html/');
+        const data = await response.json();
+        let htmlString = '<ul>';
+        for (let file of data) {
+          htmlString += `<li><a href="${file.path}">${file.name}</a></li>`;
+        }
+        htmlString += '</ul>';
+        document.getElementsByTagName('body')[0].innerHTML = htmlString;
+      })()
+    </script>
+  <body>
+</html>
